--- a/client/main.css
+++ b/client/main.css
@@ -8,3 +8,19 @@
   width: 80%;
 }
 
+.bins-share {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+
+.bins-share .input-group {
+  width: 30%;
+}
+
+.bins-share > div {
+  margin: 0 10px;
+}
